fix wordwrap in tweet container, add timeout for error message slideup

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -63,6 +63,7 @@
 }
 
 #tweet-container article {
+  word-wrap:break-word;
   width: 97%;
   height: 3.5em;
 }
